add voting observations

--- a/model.ipynb
+++ b/model.ipynb
@@ -550,7 +550,8 @@
     "### Résultat de Grid search et de la Cross-validation\n",
     "- L'ensemble des modèle testés obtiennent de très bon score sur l'ensemble des métriques de la classification\n",
     "- Le random forest et les méthodes de Boosting obtiennent les meilleurs scores\n",
-    "- Bien que le knn dispose du score le plus bas mais il est aussi très rapide à entrainé"
+    "- Bien que le knn dispose du score le plus bas mais il est aussi très rapide à entrainé\n",
+    "- le voting classifier n'a rien apporté de plus que les autres classifier"
    ]
   },
   {
